add new function for getting chla, cleaned up plot.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(plot,condprobMin)
 export(condprob)
 export(condprobMin)
 export(cp_plot)
+export(get_chla)
 export(get_nla)
 import(dplyr)
 import(ggplot2)
