--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,7 @@ export(condprobMin)
 export(cp_plot)
 export(get_chla)
 export(get_nla)
+export(plot_cp)
 import(dplyr)
 import(ggplot2)
+import(viridis)
