--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(condprobMin)
 export(cp_plot)
 export(get_chla)
 export(get_nla)
+export(multiplot)
 export(plot_cp)
 import(dplyr)
 import(ggplot2)
