--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,7 @@
 Package: microcystinchla
 Title: Code, Data, and Manuscript for NLA, microcystin, Chl analysis
-Version: 0.1
+Version: 1.0
+Date: 2016-01-29
 Authors@R: 
   c(person(given="Jeffrey",family="Hollister",role=c("aut","cre"),email="hollister.jeff@epa.gov"),
     person(given="Betty",family="Kreakie", role=c("aut"),email="kreakie.betty@epa.gov"),
