--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,16 +2,17 @@ Package: microcystinchla
 Title: Code, Data, and Manuscript for NLA, microcystin, Chl analysis
 Version: 1.0.1
 Date: 2016-01-29
-Authors@R: 
-  c(person(given="Jeffrey",family="Hollister",role=c("aut","cre"),email="hollister.jeff@epa.gov"),
+Authors@R: c(person(given="Jeffrey",family="Hollister",role=c("aut","cre"),email="hollister.jeff@epa.gov"),
     person(given="Betty",family="Kreakie", role=c("aut"),email="kreakie.betty@epa.gov"),
     person(given="Dorothy",family="Kellogg", role=c("aut"),email="qkellogg@gmail.com"))
-Description: The code, data, and submitted manuscript for \"Chlorophyll and USEPA 
-  Microcystin Health Advisory Associations\" are all contained within this package.
-Depends: R (>= 3.1.3)
+Description: The code, data, and submitted manuscript for \"Chlorophyll and
+    USEPA Microcystin Health Advisory Associations\" are all contained within this
+    package.
+Depends:
+    R (>= 3.1.3)
 License: CC0
 Imports:
-  dplyr,
-  ggplot2
+    dplyr,
+    ggplot2
 LazyData: true
-
+RoxygenNote: 5.0.1
